syntax = "proto3";

package RockPaperScissors;

// Сообщения
message UserRequest {
    int32 user_id = 1;
}

message BalanceResponse {
    string balance = 1;
}

message MatchListRequest {}

message MatchInfo {
    string result = 1;
}

message MatchListResponse {
    repeated MatchInfo matches = 1;
}

message JoinMatchRequest {
    int32 match_id = 1;
    int32 user_id = 2;
    string move = 3;
}

message JoinMatchResponse {
    string message = 1;
}


message PlayMoveResponse {
    string result = 1;
}

// Сервисы
service RockPaperScissorsService {
    rpc GetBalance(UserRequest) returns (BalanceResponse);
    rpc ListMatches(UserRequest) returns (MatchListResponse);
    rpc JoinMatch(JoinMatchRequest) returns (JoinMatchResponse);
}